# parelagmc

./: .gitignore  CMakeLists.txt  COPYRIGHT  LICENSE  README.md
cmake/: CMakeLists.txt  ParELAGMCConfig.cmake.in
cmake/example_scripts/: compile_parelagmc_debug.sh  compile_parelagmc_release.sh  svo_parelagmc_release.sh
cmake/modules/: CorrectWindowsPaths.cmake  FindPackageMultipass.cmake  FindParMoonolith.cmake  FindTRNG.cmake  ParELAGMC_CMakeUtilities.cmake  ResolveCompilerPaths.cmake
doc/: CMakeLists.txt  Doxyfile.in  parelagmc_refs.bib
examples/: AnalyticCovarianceTest.cpp  CMakeLists.txt  ComputeReferenceObservationalData.cpp  DarcyTest.cpp  DarcyTest_Legacy.cpp  DarcyTest_Legacy_RandomInput.cpp  DarcyTest_RandomInput.cpp  EmbeddedPDESamplerTest.cpp  EmbeddedPDESamplerTest_Legacy.cpp  KLSampler.cpp  LikelihoodExample.cpp  MLMC.cpp  MLMC_EmbeddedPDESampler.cpp  MLMC_Manual.cpp  MLMC_ProjectionPDESampler.cpp  PDESamplerTest.cpp  PDESamplerTest_Legacy.cpp  ProjectionPDESamplerTest.cpp  ProjectionPDESamplerTest_Legacy.cpp  RatioEstimator_MC.cpp  RatioEstimator_MC_Manager.cpp  RatioEstimator_MC_Sampling_Error.cpp  RatioEstimator_MC_Spatial_Error.cpp  RatioEstimator_MLMC.cpp  RatioEstimator_MLMC_Manager.cpp  RealizationTest.cpp  SLMC.cpp  SLMC_ProjectionPDESampler.cpp  SamplerTest.cpp
examples/SPE10/: CMakeLists.txt  README  SPE10_DarcyTest.cpp  SPE10_DarcyTest_RandomInput.cpp  SPE10_EmbeddedPDESampler.cpp  SPE10_EmbeddedPDESampler_Performance.cpp  SPE10_MLMC.cpp  SPE10_MLMC_EmbeddedPDESampler.cpp  SPE10_MLMC_ProjectionPDESampler.cpp  SPE10_PDESampler.cpp  SPE10_PDESampler_Performance.cpp  SPE10_ProjectionPDESampler.cpp  SPE10_ProjectionPDESampler_Performance.cpp  SPE10_SamplerTest.cpp
examples/example_helpers/: Build3DMesh.hpp  CreateBayesianParameterList.hpp  CreateDarcyParameterList.hpp  CreateMLMCParameterList.hpp  CreateSamplerParameterList.hpp
examples/example_parameterlists/: bayes_square_parameters.xml  cylinder_parameters.xml  example_parameters.xml  spe10_2D_parameters.xml  spe10_3D_parameters.xml
meshes/: circle.mesh  circle_embed.mesh  cube_hex.mesh  cube_hex_embed.mesh  cube_hex_enlarge.mesh  cube_tet.mesh  cube_tet_embed.mesh  cube_tet_enlarge.mesh  cylinder.mesh  cylinder_embed.mesh  cylinder_enlarge.mesh  cylsphere.mesh  cylsphere_enlarge.mesh  inline_quad.mesh  inline_tri.mesh  square.mesh  square_embed.mesh  square_enlarge.mesh
src/: AnalyticExponentialCovariance.cpp  AnalyticExponentialCovariance.hpp  BayesianInverseProblem.cpp  BayesianInverseProblem.hpp  CMakeLists.txt  CovarianceFunction.hpp  DarcySolver.cpp  DarcySolver.hpp  DarcySolver_Legacy.cpp  DarcySolver_Legacy.hpp  EmbeddedPDESampler.cpp  EmbeddedPDESampler.hpp  EmbeddedPDESampler_Legacy.cpp  EmbeddedPDESampler_Legacy.hpp  KLSampler.cpp  KLSampler.hpp  L2ProjectionPDESampler.cpp  L2ProjectionPDESampler.hpp  L2ProjectionPDESampler_Legacy.cpp  L2ProjectionPDESampler_Legacy.hpp  MC_Manager.cpp  MC_Manager.hpp  MLMC_Manager.cpp  MLMC_Manager.hpp  MLSampler.hpp  ML_BayesRatio_Manager.hpp  ML_BayesRatio_Splitting_Manager.hpp  MaternCovariance.cpp  MaternCovariance.hpp  MeshUtilities.cpp  MeshUtilities.hpp  NormalDistributionSampler.cpp  NormalDistributionSampler.hpp  PDESampler.cpp  PDESampler.hpp  PDESampler_Legacy.cpp  PDESampler_Legacy.hpp  ParELAGMC_Config.h.in  PhysicalMLSolver.hpp  SL_BayesRatio_Manager.hpp  (+6 more)
src/transfer/: Box.cpp  Box.hpp  CMakeLists.txt  HashGrid.cpp  HashGrid.hpp  MeshUtils.cpp  MeshUtils.hpp  MortarAssemble.cpp  MortarAssemble.hpp  MortarAssembler.cpp  MortarAssembler.hpp  MortarIntegrator.cpp  MortarIntegrator.hpp  ParMortarAssembler.cpp  ParMortarAssembler.hpp
